--- a/UTShuttleSwift/AddNewJob.xib
+++ b/UTShuttleSwift/AddNewJob.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -23,8 +23,8 @@
                 <outlet property="isTuesdayButton" destination="BXQ-IF-ie7" id="AbL-w0-p5n"/>
                 <outlet property="isWednesdayButton" destination="9LB-7B-wra" id="34o-BO-CoP"/>
                 <outlet property="saveButton" destination="oiw-62-FzM" id="u5S-qy-u2F"/>
-                <outlet property="selectRouteButton" destination="s28-F2-n08" id="XOg-lV-pag"/>
-                <outlet property="timeLabel" destination="wA8-tz-ta5" id="acV-UW-YEy"/>
+                <outlet property="selectRouteTF" destination="5OI-jE-hfc" id="8Bb-mb-d1A"/>
+                <outlet property="timeTF" destination="Mwf-4S-kLO" id="Ec7-Hg-1fk"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -33,18 +33,12 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qpd-ma-HhZ">
-                    <rect key="frame" x="29" y="70" width="36" height="19.5"/>
+                    <rect key="frame" x="29" y="63" width="36" height="19.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:00 am" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wA8-tz-ta5">
-                    <rect key="frame" x="314" y="71.5" width="63.5" height="18"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" red="0.36078431372549019" green="0.36862745098039218" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nic-uo-CFM">
+                <button opaque="NO" tag="108" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nic-uo-CFM">
                     <rect key="frame" x="29" y="200" width="25" height="25"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="nic-uo-CFM" secondAttribute="height" multiplier="1:1" id="r6h-NP-Iqs"/>
@@ -91,7 +85,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cWu-0j-PJb">
                             <rect key="frame" x="0.0" y="0.0" width="53.5" height="52"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mAd-f1-ptA">
+                                <button opaque="NO" tag="101" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mAd-f1-ptA">
                                     <rect key="frame" x="9" y="0.0" width="35" height="35"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="mAd-f1-ptA" secondAttribute="height" multiplier="1:1" id="nBj-Ui-KgS"/>
@@ -117,7 +111,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B85-85-fPb">
                             <rect key="frame" x="53.5" y="0.0" width="53" height="52"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BXQ-IF-ie7">
+                                <button opaque="NO" tag="102" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BXQ-IF-ie7">
                                     <rect key="frame" x="9" y="0.0" width="35" height="35"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="35" id="9Dv-1C-2Vt"/>
@@ -143,7 +137,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QEB-fZ-JDU">
                             <rect key="frame" x="106.5" y="0.0" width="53.5" height="52"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9LB-7B-wra">
+                                <button opaque="NO" tag="103" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9LB-7B-wra">
                                     <rect key="frame" x="9" y="0.0" width="35" height="35"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="9LB-7B-wra" secondAttribute="height" multiplier="1:1" id="LfA-fm-xu9"/>
@@ -169,7 +163,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mne-pu-pm6">
                             <rect key="frame" x="160" y="0.0" width="53" height="52"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iAr-cT-rIy">
+                                <button opaque="NO" tag="104" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iAr-cT-rIy">
                                     <rect key="frame" x="9" y="0.0" width="35" height="35"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="35" id="PA7-h2-hQW"/>
@@ -195,7 +189,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oIB-FE-Go2">
                             <rect key="frame" x="213" y="0.0" width="53.5" height="52"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="06T-mE-bzt">
+                                <button opaque="NO" tag="105" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="06T-mE-bzt">
                                     <rect key="frame" x="9.5" y="0.0" width="35" height="35"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="35" id="8N2-oq-Yib"/>
@@ -221,7 +215,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y49-IW-Nq8">
                             <rect key="frame" x="266.5" y="0.0" width="53" height="52"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Zc-hR-O6R">
+                                <button opaque="NO" tag="106" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Zc-hR-O6R">
                                     <rect key="frame" x="9" y="0.0" width="35" height="35"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="35" id="FGX-mU-qis"/>
@@ -247,7 +241,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wzl-li-hfq">
                             <rect key="frame" x="319.5" y="0.0" width="50.5" height="52"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IHS-uu-wwK">
+                                <button opaque="NO" tag="107" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IHS-uu-wwK">
                                     <rect key="frame" x="8" y="0.0" width="35" height="35"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="35" id="Vgw-3v-2X8"/>
@@ -309,31 +303,37 @@
                     </constraints>
                     <state key="normal" title="Save"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s28-F2-n08">
-                    <rect key="frame" x="29" y="38" width="348.5" height="30"/>
-                    <state key="normal" title="Select Route">
-                        <color key="titleColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
-                    </state>
-                </button>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Select Route" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5OI-jE-hfc">
+                    <rect key="frame" x="29" y="38" width="348.5" height="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="10:00 am" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Mwf-4S-kLO">
+                    <rect key="frame" x="313.5" y="63.5" width="64" height="17"/>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
             </subviews>
             <color key="backgroundColor" red="0.86274509803921573" green="0.86274509803921573" blue="0.86274509803921573" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="mAd-f1-ptA" firstAttribute="centerX" secondItem="nic-uo-CFM" secondAttribute="centerX" id="1by-Gg-RKe"/>
-                <constraint firstItem="qpd-ma-HhZ" firstAttribute="leading" secondItem="s28-F2-n08" secondAttribute="leading" id="2qe-w6-jMw"/>
-                <constraint firstItem="IHS-uu-wwK" firstAttribute="trailing" secondItem="wA8-tz-ta5" secondAttribute="trailing" id="4E7-d5-XBL"/>
+                <constraint firstItem="5OI-jE-hfc" firstAttribute="top" secondItem="VJT-7y-vLI" secondAttribute="bottom" constant="10" id="6lK-9m-zQz"/>
+                <constraint firstItem="Mwf-4S-kLO" firstAttribute="trailing" secondItem="5OI-jE-hfc" secondAttribute="trailing" id="6n1-rv-CxX"/>
+                <constraint firstItem="Mwf-4S-kLO" firstAttribute="centerY" secondItem="qpd-ma-HhZ" secondAttribute="centerY" id="8R2-PW-Uic"/>
                 <constraint firstItem="TTb-tj-ewk" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="CHn-YT-Oai"/>
+                <constraint firstItem="5OI-jE-hfc" firstAttribute="leading" secondItem="qpd-ma-HhZ" secondAttribute="leading" id="F84-yK-Kd2"/>
                 <constraint firstAttribute="bottom" secondItem="TTb-tj-ewk" secondAttribute="bottom" id="FIp-9j-F2w"/>
                 <constraint firstItem="VJT-7y-vLI" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Ide-OH-omo"/>
                 <constraint firstAttribute="trailing" secondItem="kB4-A7-ap2" secondAttribute="trailing" multiplier="2/1" id="LAp-h8-c5m"/>
                 <constraint firstAttribute="bottom" secondItem="oiw-62-FzM" secondAttribute="bottom" id="S28-9b-148"/>
                 <constraint firstAttribute="trailing" secondItem="oiw-62-FzM" secondAttribute="trailing" id="Tn5-Wx-CWt"/>
                 <constraint firstItem="oiw-62-FzM" firstAttribute="width" secondItem="kB4-A7-ap2" secondAttribute="width" id="VTd-FE-sUF"/>
-                <constraint firstItem="qpd-ma-HhZ" firstAttribute="top" secondItem="s28-F2-n08" secondAttribute="bottom" constant="2" id="Vp9-8D-ouR"/>
                 <constraint firstItem="nTw-NO-ugx" firstAttribute="leading" secondItem="nic-uo-CFM" secondAttribute="trailing" constant="8" id="WRt-ui-qq3"/>
                 <constraint firstAttribute="trailing" secondItem="dIL-S4-MVb" secondAttribute="trailing" id="Y2g-dd-C3R"/>
-                <constraint firstItem="wA8-tz-ta5" firstAttribute="centerY" secondItem="qpd-ma-HhZ" secondAttribute="centerY" id="YQY-zk-oJq"/>
                 <constraint firstItem="Wi0-4y-bea" firstAttribute="top" secondItem="nic-uo-CFM" secondAttribute="bottom" constant="10" id="Z3M-fk-dEY"/>
-                <constraint firstItem="s28-F2-n08" firstAttribute="top" secondItem="VJT-7y-vLI" secondAttribute="bottom" constant="10" id="bUg-yw-iFE"/>
+                <constraint firstItem="IHS-uu-wwK" firstAttribute="trailing" secondItem="Mwf-4S-kLO" secondAttribute="trailing" id="aMz-eM-lSY"/>
                 <constraint firstItem="Wi0-4y-bea" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="bzj-nr-w3q"/>
                 <constraint firstItem="nic-uo-CFM" firstAttribute="top" relation="greaterThanOrEqual" secondItem="qpd-ma-HhZ" secondAttribute="bottom" constant="15" id="dfQ-me-dWv"/>
                 <constraint firstItem="dIL-S4-MVb" firstAttribute="top" secondItem="Wi0-4y-bea" secondAttribute="bottom" constant="5" id="djQ-op-eG8"/>
@@ -344,8 +344,8 @@
                 <constraint firstItem="dIL-S4-MVb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="kNc-zE-Dly"/>
                 <constraint firstItem="qpd-ma-HhZ" firstAttribute="leading" secondItem="nic-uo-CFM" secondAttribute="leading" id="lHJ-Ku-FBk"/>
                 <constraint firstItem="VJT-7y-vLI" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="mww-jG-AZu"/>
-                <constraint firstItem="wA8-tz-ta5" firstAttribute="trailing" secondItem="s28-F2-n08" secondAttribute="trailing" id="ohM-9C-A1z"/>
                 <constraint firstItem="kB4-A7-ap2" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="pwp-ZE-MJP"/>
+                <constraint firstItem="qpd-ma-HhZ" firstAttribute="top" secondItem="5OI-jE-hfc" secondAttribute="bottom" constant="8" id="uij-3Z-rsW"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="-38" y="-173.5"/>
